# playerctl-scroller-suckless

./: CMakeLists.txt  README.md  config.hpp  cscroll.cpp  cscroll.hpp  dbus_interface.cpp  dbus_interface.hpp  main.cpp  thread_helper.cpp  thread_helper.hpp
